# cube-train-detect

./: .gitignore  Dockerfile  README.md  pyproject.toml
captures/: README.md
data/: cubes_on_desk_dataset.yaml
data/labels/: train.cache  val.cache
data/labels/train/: 0156cefb-capture_1023495099030958.txt  02cde73f-capture_992103059032000.txt  0ddd26d9-capture_1018837103951541.txt  11c8a65e-capture_1018816581539250.txt  1a4cec30-capture_992135859278500.txt  218f50c3-capture_1023438743155833.txt  2218e161-capture_1018868307156583.txt  271b5c4a-capture_992114940747291.txt  2e421874-capture_1018848827167291.txt  38bd1db5-capture_1018908903530916.txt  39c7dd46-capture_1023481862851875.txt  3e144f7f-capture_992140816156625.txt  418254b6-capture_1018724065196250.txt  4512c306-capture_1023471822959125.txt  4afdbd60-capture_1023464899901791.txt  57f120fa-capture_992131659855083.txt  5c09a242-capture_1023448220043166.txt  5f22151d-capture_1023515782394458.txt  643142a2-capture_1023505899871458.txt  6e092bfd-capture_1018831584360500.txt  701fff12-capture_992119412471500.txt  81f4ef86-capture_1018762862321791.txt  865605db-capture_1023542299972541.txt  87dd0967-capture_1018639302556125.txt  a3eba2f7-capture_992122255364750.txt  a8ac2902-capture_1023474500039833.txt  ad5be1b0-capture_1023509705956750.txt  af9427c1-capture_1018729263612583.txt  b13e2ff3-capture_992107775953041.txt  b8579063-capture_1018772704476583.txt  ba722c88-capture_1018796428017000.txt  c4cba658-capture_1023440740181166.txt  (+19 more)
src/cube_train_detect/: main.py
stl/: cube.stl
(+22 files in other folders)
